# sakura

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/glfw3webgpu/: CMakeLists.txt  glfw3webgpu.cpp
lib/webgpu/: webgpu.cpp  webgpu.h  webgpu.hpp
src/: main.cpp
src/core/: application.cpp  application.h  base.h  layer.h  window.cpp  window.h
src/gfx/: main_renderer.cpp  main_renderer.h  wgpu_context.cpp  wgpu_context.h
src/sandbox/: sandbox.cpp  sandbox.h
